<resources>
    <string name="app_name">LiberateApp</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="inicio">Inicio de sesión</string>
    <string name="ingresar_correo">Ingrese el correo</string>
    <string name="ingresar_password">Ingrese la contraseña</string>
    <string name="confirmar_password">Verifique la contraseña</string>
    <string name="ingresar_nombre">Ingrese el nombre</string>
    <string name="ingresar_apellido">Ingresar el apellido</string>
    <string name="ir_inicio_sesion">Iniciar sesión</string>
    <string name="registro">Registrarse</string>
    <string name="registro_usuario">Registro usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mantener_sesion">Mantener sesión iniciada</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_home">Inicio</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="upload">Agregar archivo</string>
    <string name="logo">Logo</string>
    <string name="avatar">Avatar</string>
    <string name="file_name">Nombre de archivo</string>
    <string name="select_file">Seleccionar archivo</string>
    <string name="no_file">Ningun archivo seleccionado</string>
    <string name="file_type">Tipo de archivo</string>
    <string name="extension_file">Extensión del archivo</string>
    <string name="informes">Informes</string>
    <string name="boletines">Boletines</string>
    <string name="revistas">Revistas</string>
    <string name="capacitaciones">Capacitaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>