<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCEAC4"
    tools:context=".registro_usuario_activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:text="@string/registro_usuario"
        android:textColor="#090909"
        android:textSize="43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/editText_passwordRegistro"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_backg"
        android:ems="10"
        android:hint="@string/ingresar_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/editText_passwordRegistro2"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/edittext_backg"
        android:ems="10"
        android:hint="@string/ingresar_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#A5E3A8"
        android:backgroundTintMode="src_in"
        android:text="@string/registro"
        android:textColor="#FFFFFF"
        android:textColorLink="#101010"
        android:textSize="20sp"
        android:textStyle="normal"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_passwordRegistro" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_correoRegistro" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:layout_marginTop="124dp"
        android:text="@string/confirmar_password"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_correoRegistro" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/editText_nombreRegistro"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_backg"
        android:ems="10"
        android:hint="@string/ingresar_nombre"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/editText_correoRegistro"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_backg"
        android:ems="10"
        android:hint="@string/ingresar_correo"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombre"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="305dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nombreRegistro" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logoweb" />
</androidx.constraintlayout.widget.ConstraintLayout>