<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCEAC4"
    tools:context=".inicio_sesion_activity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="326dp"
        android:layout_height="95dp"
        android:layout_marginTop="40dp"
        android:text="@string/inicio"
        android:textColor="#090909"
        android:textSize="43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:backgroundTint="#A5E3A8"
        android:backgroundTintMode="src_in"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textColorLink="#101010"
        android:textSize="20sp"
        android:textStyle="normal"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_correo" />

    <EditText

        android:id="@+id/editText_password"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext_backg"
        android:ems="10"
        android:hint="@string/ingresar_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText

        android:id="@+id/editText_correo"
        android:layout_width="345dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext_backg"
        android:ems="10"
        android:hint="@string/ingresar_correo"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/correo"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="159dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/logoweb" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/mantener_sesion"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        tools:layout_editor_absoluteX="33dp" />

</androidx.constraintlayout.widget.ConstraintLayout>