<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCEAC4"
    tools:context=".fragments.FragmentHome">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:backgroundTint="@color/green_buttons"
            android:clickable="true"
            android:contentDescription="@string/upload"
            android:focusable="true"
            android:src="@drawable/ic_upload"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonInformes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:backgroundTint="#E6E6E6"
            android:textColor="@color/black"
            android:text="@string/informes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBoletines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E6E6E6"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"
            android:text="@string/boletines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonInformes" />

        <Button
            android:id="@+id/buttonRevistas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/revistas"
            android:backgroundTint="#E6E6E6"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonBoletines" />

        <Button
            android:id="@+id/buttonCapacitaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#E6E6E6"
            android:textColor="@color/black"
            android:text="@string/capacitaciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRevistas" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="159dp"
            android:layout_height="52dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.892"
            app:srcCompat="@drawable/logoweb" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>