<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentUpload"
    android:background="@color/green_background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="228dp"
            android:backgroundTint="@color/green_buttons"
            android:text="@string/select_file"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_nombreArchivo" />

        <Button
            android:id="@+id/buttonUploadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/green_buttons"
            android:text="@string/upload"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelect" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:text="@string/file_name"

            app:layout_constraintEnd_toStartOf="@+id/editText_nombreArchivo"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="48dp"

            android:layout_weight="1"
            android:text="@string/file_type"
            app:layout_constraintEnd_toStartOf="@+id/spinnerFilesType"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/editText_nombreArchivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="28dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/select_file"
            android:inputType="textPersonName"
            android:labelFor="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSelectedFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/no_file"
            app:layout_constraintBottom_toTopOf="@+id/buttonSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="1.0" />

        <Spinner
            android:id="@+id/spinnerFilesType"
            android:layout_width="224dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSelectedFile"
            app:layout_constraintTop_toBottomOf="@+id/editText_nombreArchivo"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="186dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>